<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/edit_name_lab_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emp_name_lab_str"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    

    <EditText
        android:id="@+id/edit_login_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_name_lab_id"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lab_dow_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_name_lab_id"
        android:layout_below="@+id/edit_login_id"
        android:text="@string/spin_dow_str"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spin_dow_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_name_lab_id"
        android:layout_below="@+id/lab_dow_id"
        android:entries="@array/spin_dow_str_array"
        android:prompt="@string/spin_dow_str"
        android:scrollbars="vertical" />
    
    <TextView
        android:id="@+id/lab_week_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_name_lab_id"
        android:layout_below="@+id/spin_dow_id"        
        android:text="@string/spin_week_str"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spin_week_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_name_lab_id"
        android:layout_below="@+id/lab_week_id"
        android:prompt="@string/spin_week_str"
        android:scrollbars="vertical" />
    
    <TextView
        android:id="@+id/lab_year_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_name_lab_id"
        android:layout_below="@+id/spin_week_id"
        android:text="@string/spin_year_str"
        android:textAppearance="?android:attr/textAppearanceMedium" />    
    
    <Spinner
        android:id="@+id/spin_year_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_name_lab_id"
        android:layout_below="@+id/lab_year_id"
        android:entries="@array/spin_year_str_array"
        android:prompt="@string/spin_year_str"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/butGetTimes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spin_year_id"
        android:layout_below="@id/spin_year_id"
        android:onClick="onButGetTimes"
        android:text="@string/get_time_sheet_str"
        android:textSize="16sp" />

</RelativeLayout>